--- a/helm/linkerd2-app/templates/hooks/hook-pre-install-config.yaml
+++ b/helm/linkerd2-app/templates/hooks/hook-pre-install-config.yaml
@@ -8,7 +8,7 @@ metadata:
     {{.Values.global.controllerComponentLabel}}: controller
     {{.Values.global.controllerNamespaceLabel}}: {{.Release.Namespace}}
   annotations:
-    {{.Values.global.createdByAnnotation}}: {{printf "linkerd/helm %s" .Values.global.linkerdVersion}}
+    {{.Values.global.createdByAnnotation}}: {{default (printf "linkerd/helm %s" .Values.global.linkerdVersion) .Values.global.cliVersion}}
     "helm.sh/hook": "pre-install,pre-upgrade"
     "helm.sh/hook-weight": "-4"
 data:
