--- a/helm/linkerd2-app/Chart.yaml
+++ b/helm/linkerd2-app/Chart.yaml
@@ -3,7 +3,7 @@ appVersion: stable-2.8.1
 description: Linkerd gives you observability, reliability, and security for your microservices
   — with no code change required.
 home: https://linkerd.io
-icon: https://linkerd.io/images/logo-only-200h.png
+icon: https://s.giantswarm.io/app-icons/1/png/linkerd2-app-light.png
 keywords:
 - service-mesh
 kubeVersion: '>=1.13.0-0'
